--- a/MarketCountdownApp/MainWindow.xaml
+++ b/MarketCountdownApp/MainWindow.xaml
@@ -85,7 +85,12 @@
                         <!-- Name & Offset -->
                         <StackPanel Margin="60,5,10,5">
                             <TextBlock Text="London" Foreground="#222222" FontSize="14"/>
-                            <TextBlock Text="{Binding LondonOffset}" Foreground="#222222" FontSize="24"/>
+                            <TextBlock Text="{Binding LondonDisplay}"
+                                       FontSize="24"
+                                       Foreground="#222222"
+                                       HorizontalAlignment="Left"
+                                       Margin="60,5,10,5"/>
+
                         </StackPanel>
                         <!-- Local Time -->
                         <TextBlock Text="{Binding LondonLocalTime}"
@@ -122,7 +127,12 @@
                    VerticalAlignment="Top" HorizontalAlignment="Left"/>
                         <StackPanel Margin="60,5,10,5">
                             <TextBlock Text="New York" Foreground="#222222" FontSize="14"/>
-                            <TextBlock Text="{Binding NewYorkOffset}" Foreground="#222222" FontSize="24"/>
+                            <TextBlock Text="{Binding NewYorkDisplay}"
+                                       FontSize="24"
+                                       Foreground="#222222"
+                                       HorizontalAlignment="Left"
+                                       Margin="60,5,10,5"/>
+
                         </StackPanel>
                         <TextBlock Text="{Binding NewYorkLocalTime}"
                        Style="{StaticResource LocalTimeStyle}"
@@ -157,7 +167,12 @@
                    VerticalAlignment="Top" HorizontalAlignment="Left"/>
                         <StackPanel Margin="60,5,10,5">
                             <TextBlock Text="Sydney" Foreground="#222222" FontSize="14"/>
-                            <TextBlock Text="{Binding SydneyOffset}" Foreground="#222222" FontSize="24"/>
+                            <TextBlock Text="{Binding SydneyDisplay}"
+                                       FontSize="24"
+                                       Foreground="#222222"
+                                       HorizontalAlignment="Left"
+                                       Margin="60,5,10,5"/>
+
                         </StackPanel>
                         <TextBlock Text="{Binding SydneyLocalTime}"
                        Style="{StaticResource LocalTimeStyle}"
@@ -192,7 +207,12 @@
                    VerticalAlignment="Top" HorizontalAlignment="Left"/>
                         <StackPanel Margin="60,5,10,5">
                             <TextBlock Text="Tokyo" Foreground="#222222" FontSize="14"/>
-                            <TextBlock Text="{Binding TokyoOffset}" Foreground="#222222" FontSize="24"/>
+                            <TextBlock Text="{Binding TokyoDisplay}"
+                                       FontSize="24"
+                                       Foreground="#222222"
+                                       HorizontalAlignment="Left"
+                                       Margin="60,5,10,5"/>
+
                         </StackPanel>
                         <TextBlock Text="{Binding TokyoLocalTime}"
                        Style="{StaticResource LocalTimeStyle}"
